src/components/Experience/JobSummary/Job.module.css
.jobStyling {
    padding-bottom: 3rem;
}

.company, .jobDates, .jobTitle {
    margin: auto 0;
    padding-left: 5rem;
    color: var(--alternate-p-text-color);
}

.company {
    font-size: 150%;
    font-weight: bold;
    margin-bottom: 0.25rem;
}

.jobDates, .jobTitle {
    font-size: 125%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: clip;
}

.jobDates {
    padding-right: 1rem;
}

.jobTitle {
    padding-left: 1rem;
    border-left: 0.10rem solid var(--alternate-p-text-color);
}

@media (max-width: 780px) {
    .company {
        font-size: 115%;
    }
    
    .jobDates, .jobTitle {
        font-size: 95%;
    }
}

